cspm/cspm-platform/services/inventory-collector/output/588989875114/ca-central-1/ec2_6/describe_security_groups/describe_security_groups_output_20250603_143800.json
{
  "SecurityGroups": [
    {
      "GroupId": "sg-01db9f4c8300cf4c0",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e8f39c81",
      "SecurityGroupArn": "arn:aws:ec2:ca-central-1:588989875114:security-group/sg-01db9f4c8300cf4c0",
      "OwnerId": "588989875114",
      "GroupName": "launch-wizard-1",
      "Description": "launch-wizard-1 created 2020-11-09T09:26:23.007+00:00",
      "IpPermissions": [
        {
          "IpProtocol": "tcp",
          "FromPort": 0,
          "ToPort": 65535,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "udp",
          "FromPort": 0,
          "ToPort": 65535,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-0435230be2cedf90c",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e8f39c81",
      "SecurityGroupArn": "arn:aws:ec2:ca-central-1:588989875114:security-group/sg-0435230be2cedf90c",
      "OwnerId": "588989875114",
      "GroupName": "OpenVPN Access Server-2-8-5-AutogenByAWSMP-1",
      "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for OpenVPN Access Server version 2.8.5 provided by OpenVPN Inc",
      "IpPermissions": [
        {
          "IpProtocol": "udp",
          "FromPort": 1194,
          "ToPort": 1194,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 945,
          "ToPort": 945,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 943,
          "ToPort": 943,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-fdc2c794",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e8f39c81",
      "SecurityGroupArn": "arn:aws:ec2:ca-central-1:588989875114:security-group/sg-fdc2c794",
      "OwnerId": "588989875114",
      "GroupName": "default",
      "Description": "default VPC security group",
      "IpPermissions": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [
            {
              "UserId": "588989875114",
              "GroupId": "sg-fdc2c794"
            }
          ],
          "IpRanges": [],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    },
    {
      "GroupId": "sg-09befaca1c116a709",
      "IpPermissionsEgress": [
        {
          "IpProtocol": "-1",
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ],
      "VpcId": "vpc-e8f39c81",
      "SecurityGroupArn": "arn:aws:ec2:ca-central-1:588989875114:security-group/sg-09befaca1c116a709",
      "OwnerId": "588989875114",
      "GroupName": "OpenVPN Access Server-2-8-5-AutogenByAWSMP-",
      "Description": "This security group was generated by AWS Marketplace and is based on recommended settings for OpenVPN Access Server version 2.8.5 provided by OpenVPN Inc",
      "IpPermissions": [
        {
          "IpProtocol": "udp",
          "FromPort": 1194,
          "ToPort": 1194,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 22,
          "ToPort": 22,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 945,
          "ToPort": 945,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 943,
          "ToPort": 943,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        },
        {
          "IpProtocol": "tcp",
          "FromPort": 443,
          "ToPort": 443,
          "UserIdGroupPairs": [],
          "IpRanges": [
            {
              "CidrIp": "0.0.0.0/0"
            }
          ],
          "Ipv6Ranges": [],
          "PrefixListIds": []
        }
      ]
    }
  ],
  "ResponseMetadata": {
    "RequestId": "975707f4-e60c-4257-828f-ab3c23c6a909",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "975707f4-e60c-4257-828f-ab3c23c6a909",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "vary": "accept-encoding",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "5241",
      "date": "Tue, 03 Jun 2025 14:38:13 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
